+ Đổi màu cho layout client + Chuyển nút sort qua bên trái + Bỏ nút check câu hỏi đã trả lời, thay thành backround color + Thêm header cho modal đặt câu hỏi và trả lời + Bỏ hiệu ứng bong bóng ở trang login client

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/customNav.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/customNav.css
@@ -138,6 +138,8 @@
 }
 .custom-button {
     height: 80px;
+    background-color: #fecb24;
+    color:black;
 }
 @media screen and (max-width: 768px) {
     .nav-tabs-custom {
