--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -48,7 +48,7 @@
     </div>
     
     <div class="limiter">
-        <div class="container-login100 bubbles" style="background-image: url('../../Content/img/Pi5sTPQ.jpg');">
+        <div class="container-login100" style="background-image: url('../../Content/img/Pi5sTPQ.jpg');">
             <div class="wrap-login100 p-t-190 p-b-30">
                 <div class="login100-form validate-form" id="div-section">
 
@@ -69,11 +69,6 @@
         </div>
     </div>
 
-    <div id="session-template" style="display:none">
-        <div class="container-login100-form-btn p-t-10">
-            <a class="login100-form-btn" id="btn-session"></a>
-        </div>
-    </div>
 
 
     <!--===============================================================================================-->
