--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -51,9 +51,9 @@
 </head>
 <body>
 
-    <nav class="side-navbar">
+    <nav class="side-navbar side-navbar-custom">
         <div class="side-navbar-wrapper">
-            <div class="sidenav-header d-flex align-items-center justify-content-center">
+            <div class="sidenav-header sidenav-header-custom d-flex align-items-center justify-content-center">
                 <div class="sidenav-header-inner text-center">
                     <img src="~/Content/bootstrap/Dashboard/demo.bootstrapious.com/dashboard/img/avatar-1.jpg" alt="person" class="img-fluid rounded-circle">
                     <h2 class="h5 text-uppercase">Anderson Hardy</h2><span class="text-uppercase">Web Developer</span>
@@ -135,7 +135,7 @@
     <div class="page home-page">
         <!-- navbar-->
         <header class="header">
-            <nav class="navbar" style="height: 64px;">
+            <nav class="navbar narbar-custom" style="height: 64px;">
                 <div class="container-fluid">
                     <div class="navbar-holder d-flex align-items-center justify-content-between">
                         <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
