--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -46,7 +46,7 @@
                         </div>
                         <h5 id="thanks" style="color:green; text-align:center; display:none;"></h5>
                         <div class="text-center">
-                            <a id="btn-vote" class="btn btn-sm btn-default" style="background-color:darkgrey"><span class="glyphicon glyphicon-bell"></span>Bình chọn</a>
+                            <a id="btn-vote" class="btn btn-custom-defaul"><span class="glyphicon glyphicon-bell"></span>Bình chọn</a>
                         </div>
                         <div id="result" class="panel-body result">
                             <h5 class="text-danger">Kết quả người dùng bình chọn :</h5>
