--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/QA.css
@@ -80,7 +80,7 @@
 }
 
 .post-question-modal-header {
-    background-color: #216796;
+    background-color: #005f75;
 }
 
     .post-question-modal-header i {
@@ -88,7 +88,7 @@
     }
 
 .btn-send-question {
-    background-color: #70be4e;
+    
     border-radius: 20px;
 }
 
@@ -98,10 +98,14 @@
 
 .group-button-filter-question {
     margin-bottom: 20px;
+    width:160px;
+    position:absolute;
+    right:15px;
 }
 
 .btn-filter-question {
-    width: 160px;
+    height: 30px;
+    line-height: 15px;
 }
 
 .dropdown-filter-option li {
@@ -217,4 +221,16 @@
 
 .minus span i {
     margin-left: 5px;
+}
+
+.container-sort-question {
+    height:50px;
+}
+
+.answered-question {
+    background-color: #bbd9c5;
+}
+
+.post-question-modal-header h4 {
+    color:white;
 }
